--- a/BoldSignDemos/BoldSign.Demos.csproj
+++ b/BoldSignDemos/BoldSign.Demos.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BoldSign.Api" Version="2.0.1" />
+    <PackageReference Include="BoldSign.Api" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
