--- a/BoldSignDemos/BoldSign.Demos.csproj
+++ b/BoldSignDemos/BoldSign.Demos.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="BoldSign.Api" Version="*" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
